# stintmanager

./: .gitignore  Makefile  Readme.md  db.sqlite3  manage.py  pyproject.toml  setup.sh
common/: models.py  types.py
common/migrations/: 0001_initial.py
core/: admin.py  models.py
core/migrations/: 0001_initial.py
driver/: models.py
driver/migrations/: 0001_initial.py
frontend/src/: App.js
frontend/src/components/: LoginForm.js  ProtectedRoute.js
race/: models.py
race/migrations/: 0001_initial.py
race_calendar/: apps.py  models.py
race_calendar/migrations/: 0001_initial.py
races/: admin.py  forms.py  models.py  urls.py  views.py
races/migrations/: 0001_initial.py
races/templatetags/: race_filters.py
scripts/: create_sample_data.py  reset_db.py
static/css/: main.css
static/js/: form-utils.js  main.js  race-detail.js
stintmanager/: asgi.py  settings.py  urls.py  wsgi.py
stintmanager/management/commands/: create_initial_data.py  test_project.py
team/: models.py
team/migrations/: 0001_initial.py
teams/: admin.py  forms.py  models.py  urls.py  views.py
teams/migrations/: 0001_initial.py
templates/: home.html
templates/auth/: logged_out.html  login.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html
templates/partials/: base.html
templates/races/: race_detail.html  race_form.html  race_list.html
templates/teams/: confirm_withdraw.html  race_teams.html  team_dashboard.html  team_detail.html  team_form.html  team_list.html
