[tool.poetry]
name = "stintmanager"
version = "0.1.0"
description = "An application to manage driver stints for motorsports endurance"
authors = ["Francis Genet"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.3"
claudesync = "^0.6.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
