[tool.poetry]
name = "stintmanager"
version = "0.1.0"
description = "An application to manage driver stints for motorsports endurance"
authors = ["Francis Genet"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.3"

[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.13"
django-extensions = "^3.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
